--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
                 <nav class="header-nav">
                     <ul>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">ABOUT US</a></li>
-                        <li><a href="#">SERVICE</a></li>
-                        <li><a href="#">PAGES</a></li>
-                        <li><a href="#">TEAM</a></li>
-                        <li><a href="#">BLOG</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="#hero">HOME</a></li>
+                        <li><a href="#about">ABOUT US</a></li>
+                        <li><a href="#service">SERVICE</a></li>
+                        <li><a href="#projects">PAGES</a></li>
+                        <li><a href="#team">TEAM</a></li>
+                        <li><a href="#blog">BLOG</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
                     </ul>
                     <span>
                         <a href="#">
@@ -86,8 +86,8 @@
                         labore et dolore magna aliqua</p>
                     <div class="slide-container-buttons wow animate__animated animate__bounceInUp"
                         data-wow-duration="3s" data-wow-delay="0.5s">
-                        <a class="btn btn-primary" href="#">OUR SERVICE</a>
-                        <a class="btn btn-secondary" href="#">ABOUT US</a>
+                        <a class="btn btn-primary" href="#service">OUR SERVICE</a>
+                        <a class="btn btn-secondary" href="#about">ABOUT US</a>
                     </div>
                 </div>
             </li>
@@ -104,8 +104,8 @@
                         labore et dolore magna aliqua</p>
                     <div class="slide-container-buttons wow animate__animated animate__bounceInUp"
                         data-wow-duration="3s" data-wow-delay="0.5s">
-                        <a class="btn btn-primary" href="#">OUR SERVICE</a>
-                        <a class="btn btn-secondary" href="#">ABOUT US</a>
+                        <a class="btn btn-primary" href="#service">OUR SERVICE</a>
+                        <a class="btn btn-secondary" href="#about">ABOUT US</a>
                     </div>
                 </div>
             </li>
@@ -120,7 +120,7 @@
     </div>
 
     <main>
-        <section class="about-us">
+        <section id="about" class="about-us">
             <div class="container about-us-container">
                 <article class="about-us-content">
                     <figure class="about-us-image">
@@ -213,7 +213,7 @@
             </div>
         </section>
 
-        <section class="our-service">
+        <section id="service" class="our-service">
             <div class="container our-service-container">
                 <div class="section-header">
                     <h2>Our Service</h2>
@@ -282,7 +282,7 @@
                 </div>
             </div>
         </section>
-        <section class="projects">
+        <section id="projects" class="projects">
             <div class="container projects-container">
                 <div class="section-header">
                     <h2>Our Projects</h2>
@@ -367,7 +367,7 @@
             </div>
         </section>
 
-        <section class="experts">
+        <section id="team" class="experts">
             <div class="container experts-container">
                 <div class="section-header">
                     <h2>Expert Engineer</h2>
@@ -647,7 +647,7 @@
             </div>
         </section>
 
-        <section id="blog-carousel" class="our-blog">
+        <section id="blog" class="our-blog">
             <div class="container our-blog-container">
                 <div class="section-header">
                     <h2>Our Blog</h2>
@@ -746,7 +746,7 @@
             </div>
         </section>
 
-        <section class="contact-section">
+        <section id="contact" class="contact-section">
             <div class="container contact-section-container">
                 <div class="section-header">
                     <h2>Quick Contact</h2>
@@ -814,6 +814,78 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="container footer-container">
+            <div class="footer-column">
+                <h3 class="footer-title">About Constructor</h3>
+                <p class="footer-text">Welcome our creative construction business media. we are waiting for give construction service for you. you take any construction</p>
+                <div class="footer-social">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-title">Popular Post</h3>
+                <div class="footer-post">
+                    <img src="assets/img/blog1.jpg" alt="Popular post 1">
+                    <div class="footer-post-content">
+                        <a href="#">Fired After Removal of United Airlines</a>
+                        <span>March 16, 2025</span>
+                    </div>
+                </div>
+                <div class="footer-post">
+                    <img src="assets/img/blog2.jpg" alt="Popular post 2">
+                    <div class="footer-post-content">
+                        <a href="#">Passenger Removal of United Airlines Nited</a>
+                        <span>June 16, 2025</span>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-title">Recent Project</h3>
+                <div class="footer-projects">
+                    <a href="#"><img src="assets/img/1.jpg" alt="Project 1"></a>
+                    <a href="#"><img src="assets/img/2.jpg" alt="Project 2"></a>
+                    <a href="#"><img src="assets/img/3.jpg" alt="Project 3"></a>
+                    <a href="#"><img src="assets/img/4.jpg" alt="Project 4"></a>
+                    <a href="#"><img src="assets/img/1.jpg" alt="Project 5"></a>
+                    <a href="#"><img src="assets/img/2.jpg" alt="Project 6"></a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-title">Company Address</h3>
+                <p class="footer-text">Please contact with us if you have any question from company.</p>
+                <div class="footer-contact">
+                    <div class="footer-contact-item">
+                        <i class="fa fa-map-marker-alt"></i>
+                        <span>56/A-102-Middle Point, USA</span>
+                    </div>
+                    <div class="footer-contact-item">
+                        <i class="fa fa-phone"></i>
+                        <span>+225 124 365 124</span>
+                    </div>
+                    <div class="footer-contact-item">
+                        <i class="fa fa-envelope"></i>
+                        <span>example@mail.com</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container footer-bottom-container">
+                <p>Copyright © Contructor All Rights Reserved.</p>
+                <nav class="footer-nav">
+                    <a href="#hero">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#service">Our Service</a>
+                    <a href="#contact">Contact</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ResponsiveSlides.js/1.55/responsiveslides.min.js"></script>
