--- a/index.html
+++ b/index.html
@@ -672,6 +672,7 @@
                         <article class="our-blog-item blog-slide" data-slideIndex="0">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog1.jpg" alt="blog 1">
+                                <div class="blog-category">Web Design</div>
                             </figure>
                             <div class="our-blog-item-content">
                                 <h5>
@@ -684,6 +685,7 @@
                         <article class="our-blog-item blog-slide" data-slideIndex="1">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog2.jpg" alt="blog 2">
+                                <div class="blog-category">Web Development</div>
                             </figure>
                             <div class="our-blog-item-content">
                                 <h5>
@@ -696,6 +698,7 @@
                         <article class="our-blog-item blog-slide" data-slideIndex="2">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog3.jpg" alt="blog 3">
+                                <div class="blog-category">Wordpress</div>
                             </figure>
                             <div class="our-blog-item-content">
                                 <h5>
@@ -708,6 +711,7 @@
                         <article class="our-blog-item blog-slide" data-slideIndex="3">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog1.jpg" alt="blog 4">
+                                <div class="blog-category">Wordpress</div>
                             </figure>
                             <div class="our-blog-item-content">
                                 <h5>
@@ -720,6 +724,7 @@
                         <article class="our-blog-item blog-slide" data-slideIndex="4">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog2.jpg" alt="blog 5">
+                                <div class="blog-category">Wordpress</div>
                             </figure>
                             <div class="our-blog-item-content">
                                 <h5>
@@ -732,6 +737,7 @@
                         <article class="our-blog-item blog-slide" data-slideIndex="5">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog3.jpg" alt="blog 6">
+                                <div class="blog-category">Wordpress</div>
                             </figure>
                             <div class="our-blog-item-content">
                                 <h5>
@@ -750,7 +756,8 @@
             <div class="container contact-section-container">
                 <div class="section-header">
                     <h2>Quick Contact</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt consectetuer</p>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                        consectetuer</p>
                     <div class="section-icon">
                         <div class="icon-line"></div>
                         <i class="fa fa-gavel"></i>
@@ -784,7 +791,7 @@
                         </div>
                         <div class="contact-info-item">
                             <div class="contact-icon">
-                                <i class="fa fa-phone"></i>
+                                <i class="fa fa-phone-square"></i>
                             </div>
                             <div class="contact-info-content">
                                 <h3>Phone</h3>
@@ -819,7 +826,8 @@
         <div class="container footer-container">
             <div class="footer-column">
                 <h3 class="footer-title">About Constructor</h3>
-                <p class="footer-text">Welcome our creative construction business media. we are waiting for give construction service for you. you take any construction</p>
+                <p class="footer-text">Welcome our creative construction business media. we are waiting for give
+                    construction service for you. you take any construction</p>
                 <div class="footer-social">
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
@@ -874,18 +882,18 @@
                 </div>
             </div>
         </div>
-        <div class="footer-bottom">
-            <div class="container footer-bottom-container">
-                <p>Copyright © Contructor All Rights Reserved.</p>
-                <nav class="footer-nav">
-                    <a href="#hero">Home</a>
-                    <a href="#about">About</a>
-                    <a href="#service">Our Service</a>
-                    <a href="#contact">Contact</a>
-                </nav>
-            </div>
-        </div>
     </footer>
+    <div class="footer-bottom">
+        <div class="container footer-bottom-container">
+            <p>Copyright © Contructor All Rights Reserved.</p>
+            <nav class="footer-nav">
+                <a href="#hero">Home</a>
+                <a href="#about">About</a>
+                <a href="#service">Our Service</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ResponsiveSlides.js/1.55/responsiveslides.min.js"></script>
