Ajustes diseño movil

--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
     </div>
 
     <div class="quick-contact">
-        <div class="container quick-contact-container wow animate__animated animate__fadeInUp"
-            data-wow-duration="1.1s">
+        <div class="container quick-contact-container wow animate__animated animate__fadeInUp" data-wow-duration="1.1s">
             <h1>Are you ready to start your business contact now</h1>
             <a class="btn btn-quick-contact" href="#">Get A Quik</a>
         </div>
@@ -186,7 +185,8 @@
                         <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit. Ipsa libero ab voluptatibus itaque
                             quas in voluptas</p>
                     </div>
-                    <div class="our-feature-item item-left wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
+                    <div class="our-feature-item item-left wow animate__animated animate__fadeInUp"
+                        data-wow-delay="0.2s">
                         <div class="hex-feature hex-left">
                             <i class="fa-regular fa-thumbs-up"></i>
                         </div>
@@ -205,7 +205,8 @@
                         <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit. Ipsa libero ab voluptatibus itaque
                             quas in voluptas</p>
                     </div>
-                    <div class="our-feature-item item-left wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
+                    <div class="our-feature-item item-left wow animate__animated animate__fadeInUp"
+                        data-wow-delay="0.5s">
                         <div class="hex-feature hex-left">
                             <i class="fa-brands fa-deviantart"></i>
                         </div>
@@ -646,7 +647,8 @@
             <div class="container subscribe-us-form">
                 <h2 class="wow animate__animated animate__fadeInDown" data-wow-delay="0.1s">Subscribe Us</h2>
                 <form action="#">
-                    <input class="wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" type="email" placeholder="Your email address">
+                    <input class="wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" type="email"
+                        placeholder="Your email address">
                 </form>
             </div>
         </section>
@@ -673,8 +675,8 @@
                         </a>
                     </div>
                     <div id="blog-slide-container">
-                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp" data-slideIndex="0"
-                            data-wow-delay="0.1s">
+                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp"
+                            data-slideIndex="0" data-wow-delay="0.1s">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog1.jpg" alt="blog 1">
                                 <div class="blog-category">Web Design</div>
@@ -687,8 +689,8 @@
                                 <a href="#">Passenger Removal of United Airlines Nited Airlin Fired </a>
                             </div>
                         </article>
-                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp" data-slideIndex="1"
-                            data-wow-delay="0.2s">
+                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp"
+                            data-slideIndex="1" data-wow-delay="0.2s">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog2.jpg" alt="blog 2">
                                 <div class="blog-category">Web Development</div>
@@ -701,8 +703,8 @@
                                 <a href="#">Passenger Removal of United Airlines Nited Airlin Fired</a>
                             </div>
                         </article>
-                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp" data-slideIndex="2"
-                            data-wow-delay="0.3s">
+                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp"
+                            data-slideIndex="2" data-wow-delay="0.3s">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog3.jpg" alt="blog 3">
                                 <div class="blog-category">Wordpress</div>
@@ -715,8 +717,8 @@
                                 <a href="#">Passenger Removal of United Airlines Nited Airlin Fired</a>
                             </div>
                         </article>
-                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp" data-slideIndex="3"
-                            data-wow-delay="0.4s">
+                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp"
+                            data-slideIndex="3" data-wow-delay="0.4s">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog1.jpg" alt="blog 4">
                                 <div class="blog-category">Wordpress</div>
@@ -729,8 +731,8 @@
                                 <a href="#">Passenger Removal of United Airlines Nited Airlin Fired</a>
                             </div>
                         </article>
-                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp" data-slideIndex="4"
-                            data-wow-delay="0.5s">
+                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp"
+                            data-slideIndex="4" data-wow-delay="0.5s">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog2.jpg" alt="blog 5">
                                 <div class="blog-category">Wordpress</div>
@@ -743,8 +745,8 @@
                                 <a href="#">Passenger Removal of United Airlines Nited Airlin Fired</a>
                             </div>
                         </article>
-                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp" data-slideIndex="5"
-                            data-wow-delay="0.6s">
+                        <article class="our-blog-item blog-slide wow animate__animated animate__fadeInUp"
+                            data-slideIndex="5" data-wow-delay="0.6s">
                             <figure class="our-blog-image">
                                 <img src="assets/img/blog3.jpg" alt="blog 6">
                                 <div class="blog-category">Wordpress</div>
@@ -826,6 +828,74 @@
                                 <p>www.consultant.com, www.raytheme.com</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="faq" class="faq">
+            <div class="container faq-container">
+                <div class="section-header wow animate__animated animate__fadeInDown" data-wow-duration="1s">
+                    <h2>FAQ &amp; Support</h2>
+                    <p>We answer the most common questions about how we manage and deliver every project.</p>
+                    <div class="section-icon">
+                        <div class="icon-line"></div>
+                        <i class="fa fa-gavel"></i>
+                        <div class="icon-line"></div>
+                    </div>
+                </div>
+                <div class="faq-content">
+                    <div class="faq-highlight wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
+                        <h3>Build without surprises</h3>
+                        <p>We work with transparent schedules, milestone tracking, and on-site supervision so you always
+                            know where the project stands.</p>
+                        <ul>
+                            <li><i class="fa fa-check"></i>Dedicated team assigned to your project.</li>
+                            <li><i class="fa fa-check"></i>Weekly reports and site walkthroughs.</li>
+                            <li><i class="fa fa-check"></i>Warranty on materials and workmanship.</li>
+                        </ul>
+                    </div>
+                    <div class="accordion wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
+                        <article class="accordion-item">
+                            <button class="accordion-title" type="button">
+                                <span>What is included in the design package?</span>
+                                <span class="accordion-icon"><i class="fa fa-plus"></i></span>
+                            </button>
+                            <div class="accordion-content">
+                                <p>We deliver drawings, renders, and a detailed budget. We also suggest materials that
+                                    match your target cost and guide you through permit requirements.</p>
+                            </div>
+                        </article>
+                        <article class="accordion-item">
+                            <button class="accordion-title" type="button">
+                                <span>Do you work with your own suppliers?</span>
+                                <span class="accordion-icon"><i class="fa fa-plus"></i></span>
+                            </button>
+                            <div class="accordion-content">
+                                <p>We partner with certified suppliers under framework agreements to secure quality and
+                                    delivery times, but we can also collaborate with your preferred partners.</p>
+                            </div>
+                        </article>
+                        <article class="accordion-item">
+                            <button class="accordion-title" type="button">
+                                <span>How do you control costs?</span>
+                                <span class="accordion-icon"><i class="fa fa-plus"></i></span>
+                            </button>
+                            <div class="accordion-content">
+                                <p>We use milestone payments, weekly reviews, and comparative quotes. Any change is
+                                    documented and approved before execution.</p>
+                            </div>
+                        </article>
+                        <article class="accordion-item">
+                            <button class="accordion-title" type="button">
+                                <span>Is there post-delivery support?</span>
+                                <span class="accordion-icon"><i class="fa fa-plus"></i></span>
+                            </button>
+                            <div class="accordion-content">
+                                <p>We include follow-up visits, a maintenance guide, and a direct support line for
+                                    issues covered by the warranty period.</p>
+                            </div>
+                        </article>
                     </div>
                 </div>
             </div>
@@ -913,7 +983,9 @@
                 <i class="fa fa-times"></i>
             </button>
             <div class="video-modal-wrapper">
-                <iframe id="videoIframe" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe id="videoIframe" src="" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
     </div>
